# nsvb

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  setup.py
data/: REF_SPECIES.csv  Table S10a_fia_wood_c_frac_live.csv  Table S11_mean_crprop.csv  Table S1a_volib_coefs_spcd.csv  Table S1b_volib_coefs_jenkins.csv  Table S2a_volbk_coefs_spcd.csv  Table S2b_volbk_coefs_jenkins.csv  Table S3a_volob_coefs_spcd.csv  Table S3b_volob_coefs_jenkins.csv  Table S4a_rcumob_coefs_spcd.csv  Table S4b_rcumob_coefs_jenkins.csv  Table S5a_rcumib_coefs_spcd.csv  Table S5b_rcumib_coefs_jenkins.csv  Table S6a_bark_biomass_coefs_spcd.csv  Table S6b_bark_biomass_coefs_jenkins.csv  Table S7a_branch_biomass_coefs_spcd.csv  Table S7b_branch_biomass_coefs_jenkins.csv  Table S8a_total_biomass_coefs_spcd.csv  hd_jenkins.csv  hd_spcd.csv  (+3 more)
nsvb/: Cargo.toml  equations.py  estimators.py  models.py  tables.py
nsvb/data/: REF_SPECIES.csv  Table S12_component_scorecard.csv  Table S13_component_spcd_scorecard.csv  Table S14_component_region_scorecard.csv  Table S15_component_region_spcd_scorecard.csv  Table S16_component_state_scorecard.csv  Table S18_component_division_scorecard.csv  Table S19_component_division_spcd_scorecard.csv  Table S20_component_dclass_scorecard.csv  Table S9b_foliage_coefs_jenkins.csv  WOOD_DENSITY_PROPORTIONS.csv
nsvb/src/: ffi.rs  lib.rs  main.rs  models.rs  tree.rs
nsvb/src/models/: eqns.rs
nsvb/src/models/species/: db.rs  mod.rs
nsvb/src/tree/: decay.rs  models.rs  species.rs
nsvb/src/tree/species/: coefs.rs
nsvb/tests/: gtr_examples.rs
(+18 files in other folders)
