[package]
name = "nsvb"
version = "0.1.0"
authors = ["Lucas Wells <lucas@silvxlabs.com>"]
description = "A National-Scale Tree Volume, Biomass, and Carbon Modeling System for the United States"
repository = "https://github.com/silvxlabs/nsvb"
license = "MIT"
edition = "2021"

[lib]
name = "nsvb"
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.8.1"
assert_approx_eq = "1.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
